--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@
 /test/tmp/
 /test/version_tmp/
 /tmp/
+vendor/
+.vagrant/
 
 ## Specific to RubyMotion:
 .dat*
@@ -32,3 +34,6 @@ build/
 
 # unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
 .rvmrc
+
+## ignore the screen shots made by front end tests 
+front_test/
